# rs-web-parser

./: Cargo.toml  README.md  pyproject.toml  requirements.txt
src/: html_extractor.rs  lib.rs
