[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_scraper"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.42", features = ["full"] }
wreq = { version = "6.0.0-rc.21", features = ["json", "cookies", "gzip", "brotli"] }
wreq-util = "3.0.0-rc.7"
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
regex = "1.11"
futures = "0.3"
lazy_static = "1.5"
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
